09-argocd-and-rollout/01-ingress-argocd-and-rollouts/ingress-argo-rollouts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-rollouts
  namespace: argo-rollouts
spec:
  ingressClassName: nginx
  rules:
  - host: rollouts.magedu.com
    http:
      paths:
      - backend:
          service:
            name: argo-rollouts-dashboard
            port: 
              number: 3100 
        path: /
        pathType: Prefix
  - host: rollout.magedu.com
    http:
      paths:
      - backend:
          service:
            name: argo-rollouts-dashboard
            port: 
              number: 3100 
        path: /
        pathType: Prefix
